--- a/panitia/templates/dash.html
+++ b/panitia/templates/dash.html
@@ -47,10 +47,10 @@
                     <div class="pengumuman"><br>Pengumuman</div>
                 </a>
             </div>  
-            <div class="grafik"> Grafik Hasil Perolehan Suara </div>   
+            <!-- <div class="grafik"> Grafik Hasil Perolehan Suara </div>    -->
         
         <div>
-        <div class="barchart">
+        <!-- <div class="barchart">
             <canvas id="myChart" style="margin-top: 1px; width:50%; max-width:720px;"></canvas>
             <script>
             var xValues = ["No.1", "No.2"];
@@ -77,7 +77,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
         <!-- <img src="media/images/avatar.png" alt=""> -->
